@@ -29,12 +29,11 @@
 <entry key="trayrss.en.config_cancelButton.text">Cancel</entry>
 <entry key="trayrss.en.config_mainConfigPanel.border.title">General Settings</entry>
 <entry key="trayrss.en.config_displayCountLabel.text">Display Count</entry>
-<entry key="trayrss.en.config_displayCountField.text"></entry>
 <entry key="trayrss.en.config_displayTimeLabel.text">Display Time (seconds)</entry>
 <entry key="trayrss.en.config_table.header.column_one">Feed Name</entry>
 <entry key="trayrss.en.config_table.header.column_two">Feed URL</entry>
 <entry key="trayrss.en.config_table.header.column_three">Intervall</entry>
 <entry key="trayrss.en.config_table.header.column_four">Monitored</entry>
 <entry key="trayrss.en.config_languageSelectorLabel.text">Language</entry>
-<entry key="trayrss.en.config_languageSelectorField.text">de,en</entry>
+<entry key="trayrss.en.config_languageSelectorField.text">en,de</entry>
 </properties>
